--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     aaptOptions.useNewCruncher = false
     defaultConfig {
         applicationId "com.example.kushagrakumar.myapplication"
-        minSdkVersion 9
+        minSdkVersion 14 //9
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -24,6 +24,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.android.gms:play-services:10.2.0'
+    compile 'com.android.support:design:23.4.0'
     testCompile 'junit:junit:4.12'
 }
